# human-detection-raspberypie

./: CMakeLists.txt  README.md  main.cpp  yolov8n.param
